# the-lammanator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  whodaman.py
data/: secret_briefing.md
problems/problem1/: expected_output.txt  problem.md  student_code.py
problems/problem2/: expected_output.txt  problem.md  student_code.py
problems/problem3/: expected_output.txt  problem.md  student_code.py
problems/problem4/: expected_output.txt  problem.md  student_code.py
tests/: test_problem1.py  test_problem2.py  test_problem3.py  test_problem4.py
